--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body class="position-relative">
     <!--  loader-->
-    <div class="loader d-none position-absolute top-0 start-0 w-100 h-100">
+    <div class="loader  position-absolute top-0 start-0 w-100 h-100">
       <div
         class="loader_text d-flex justify-content-center align-items-center min-vh-100"
       >
@@ -593,3 +593,5 @@
     <script src="js/mainJS.js"></script>
   </body>
 </html>
+
+<!-- Made By Mohamed Hany -->
