--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body class="position-relative">
     <!--  loader-->
-    <div class="loader  position-absolute top-0 start-0 w-100 h-100">
+    <div class="loader position-absolute top-0 start-0 w-100 h-100">
       <div
         class="loader_text d-flex justify-content-center align-items-center min-vh-100"
       >
@@ -202,8 +202,8 @@
             </div>
             <div class="col-md-3 sk col-sm-6 p-2 card-group">
               <div class="container skillsCont bg-secondary bg-opacity-10 p-4">
-                <i class="fa-solid icon fa-chart-line"></i>
-                <h4>business analysis</h4>
+                <i class="fa-solid icon fa-mobile"></i>
+                <h4> responsive Design</h4>
               </div>
             </div>
           </div>
