--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       </div>
       <!-- the color pallete -->
       <div class="position-fixed palleteContainer d-flex">
-        <div class="colorsContainer overflow-hidden   w-75 h-100">
+        <div class="colorsContainer overflow-hidden    h-100">
           <div
             class="container d-flex justify-content-evenly align-items-center flex-wrap w-100 h-75"
           >
@@ -107,7 +107,7 @@
           </div>
         </div>
         <div
-          class="iconcontainer shadow rounded-end  w-25 h-25 m-auto d-flex justify-content-center align-items-center"
+          class="iconcontainer shadow rounded-end  h-25 m-auto d-flex justify-content-center align-items-center"
         >
           <i class="fas fa-gear icon openIcon  fa-spin clickable"></i>
           <i class="fas fa-x  icon  fa-beat closeIcon clickable d-none"></i>
